switch to java.net.URI and add additional test cases